Fix overlapping class

--- a/css/blocks/nav.css
+++ b/css/blocks/nav.css
@@ -37,7 +37,7 @@ nav a {
 }
 
 @media screen and (max-width: 800px) {
-    nav ul, li {
+    nav ul, nav li {
         display: none;
     }
 
